.metadata/.plugins/org.eclipse.cdt.ui/Switch.build.log
18:07:46 **** Incremental Build of configuration Debug for project Switch ****
make all 
Building file: ../DIO_Prog.c
Invoking: AVR Compiler
avr-gcc -Wall -g2 -gstabs -O0 -fpack-struct -fshort-enums -ffunction-sections -fdata-sections -std=gnu99 -funsigned-char -funsigned-bitfields -mmcu=atmega32 -DF_CPU=4000000UL -MMD -MP -MF"DIO_Prog.d" -MT"DIO_Prog.o" -c -o "DIO_Prog.o" "../DIO_Prog.c"
Finished building: ../DIO_Prog.c
 
Building file: ../DIO_voidInitialize.c
Invoking: AVR Compiler
avr-gcc -Wall -g2 -gstabs -O0 -fpack-struct -fshort-enums -ffunction-sections -fdata-sections -std=gnu99 -funsigned-char -funsigned-bitfields -mmcu=atmega32 -DF_CPU=4000000UL -MMD -MP -MF"DIO_voidInitialize.d" -MT"DIO_voidInitialize.o" -c -o "DIO_voidInitialize.o" "../DIO_voidInitialize.c"
Finished building: ../DIO_voidInitialize.c
 
Building file: ../LCD_Prog.c
Invoking: AVR Compiler
avr-gcc -Wall -g2 -gstabs -O0 -fpack-struct -fshort-enums -ffunction-sections -fdata-sections -std=gnu99 -funsigned-char -funsigned-bitfields -mmcu=atmega32 -DF_CPU=4000000UL -MMD -MP -MF"LCD_Prog.d" -MT"LCD_Prog.o" -c -o "LCD_Prog.o" "../LCD_Prog.c"
Finished building: ../LCD_Prog.c
 
Building file: ../SWITCH_Prog.c
Invoking: AVR Compiler
avr-gcc -Wall -g2 -gstabs -O0 -fpack-struct -fshort-enums -ffunction-sections -fdata-sections -std=gnu99 -funsigned-char -funsigned-bitfields -mmcu=atmega32 -DF_CPU=4000000UL -MMD -MP -MF"SWITCH_Prog.d" -MT"SWITCH_Prog.o" -c -o "SWITCH_Prog.o" "../SWITCH_Prog.c"
Finished building: ../SWITCH_Prog.c
 
Building file: ../delay_ms.c
Invoking: AVR Compiler
avr-gcc -Wall -g2 -gstabs -O0 -fpack-struct -fshort-enums -ffunction-sections -fdata-sections -std=gnu99 -funsigned-char -funsigned-bitfields -mmcu=atmega32 -DF_CPU=4000000UL -MMD -MP -MF"delay_ms.d" -MT"delay_ms.o" -c -o "delay_ms.o" "../delay_ms.c"
Finished building: ../delay_ms.c
 
Building file: ../main.c
Invoking: AVR Compiler
avr-gcc -Wall -g2 -gstabs -O0 -fpack-struct -fshort-enums -ffunction-sections -fdata-sections -std=gnu99 -funsigned-char -funsigned-bitfields -mmcu=atmega32 -DF_CPU=4000000UL -MMD -MP -MF"main.d" -MT"main.o" -c -o "main.o" "../main.c"
In file included from ../main.c:18:0:
/usr/lib/avr/include/util/delay.h:95:3: warning: #warning "Compiler optimizations disabled; functions from <util/delay.h> won't work as designed" [-Wcpp]
 # warning "Compiler optimizations disabled; functions from <util/delay.h> won't work as designed"
   ^
../main.c:24:6: warning: return type of ‘main’ is not ‘int’ [-Wmain]
 void main(void)
      ^
../main.c: In function ‘main’:
../main.c:51:1: warning: implicit declaration of function ‘DIO_u8setPinValue’ [-Wimplicit-function-declaration]
 DIO_u8setPinValue(KEYPAD_FIRST_ROW,DIO_HIGH);
 ^
../main.c:54:7: error: expected expression before ‘)’ token
  if (*)
       ^
make: *** [main.o] Error 1

18:07:46 Build Finished (took 232ms)

